# WorldEdit-BE

./: .eslintrc.json  .gitignore  .mcattributes  .mcdefinitions  .prettierrc.json  BETA.md  CONTRIBUTING.md  COPYRIGHTS.txt  LICENSE.txt  README.md  build.mjs  build.py  config.json  crowdin.yml  mc_manifest.json  package-lock.json  package.json  po2lang.py  remap_imports.py  requirements.txt  tsconfig.json  worldedit_settings.json
.github/: FUNDING.yml
BP/: LICENSE.txt  manifest.json
RP/: LICENSE.txt  manifest.json  sounds.json
app/: BiomeVisualizer.tscn  Main.tscn  auto_processor.gd  biome_height_data.gd  biome_visualizer.gd  export_presets.cfg  leveldb.gdnlib  leveldb_ref.gdns  main.gd  material.tres  mc_world.gd  native_solution.tres  nbt_parser.gd  project.godot  scene.gd  test.gd  test.tscn  world_processor.gd
app/addons/gdnative_data/leveldb/: .sconsign.dblite  CMakeLists.txt  build.py
app/addons/gdnative_data/leveldb/src/: common.hpp  leveldb.code-workspace  leveldb.cpp  leveldb_ref.cpp  leveldb_ref.hpp
src/: config.d.ts  config.ts  index.ts  whitelist.ts
texts/: README.md  base.pot  bg_BG.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  en_US.po  es_ES.po  es_MX.po  fi_FI.po  fr_CA.po  fr_FR.po  hu_HU.po  id_ID.po  it_IT.po  ja_JP.po  ko_KR.po  nl_NL.po  no_NO.po  pl_PL.po  pt_BR.po  pt_PT.po  ru_RU.po  sk_SK.po  sv_SE.po  template.pot  th_TH.po  tr_TR.po  uk_UA.po  zh_CN.po  zh_TW.po
tools/: add_to_world.mjs  item2tool.py  plugins.mjs  po2lang.mjs  po2lang.py  process_config.mjs  process_config.py  process_manifest.mjs  process_manifest.py  (+4 more)
(+717 files in other folders)
